# LightweightCryptography

no_aes/: .cproject  .project  no_aes Debug.launch  no_aes.ioc
no_base/: .cproject  .project  no_base Debug.launch  no_base.ioc
no_clefia/: .cproject  .project  no_clefia Debug.launch  no_clefia.ioc
no_enocoro/: .cproject  .project  no_enocoro Debug.launch  no_enocoro.ioc
no_lea/: .cproject  .project  no_lea Debug.launch  no_lea.ioc
no_present/: .cproject  .project  no_present Debug.launch  no_present.ioc
no_trivium/: .cproject  .project  no_trivium Debug.launch  no_trivium.ioc
notrust_aes/: .cproject  .mxproject  .project  notrust_aes Debug.launch  notrust_aes.ioc
notrust_base/: .cproject  .project  notrust_base Debug.launch  notrust_base.ioc
notrust_clefia/: .cproject  .project  notrust_clefia Debug.launch  notrust_clefia.ioc
notrust_enocoro/: .cproject  .project  notrust_enocoro Debug.launch  notrust_enocoro.ioc
notrust_lea/: .cproject  .project  notrust_lea Debug.launch  notrust_lea.ioc
notrust_present/: .cproject  .mxproject  .project  notrust_present Debug.launch  notrust_present.ioc
notrust_present/Core/Inc/: CMakeLists.txt
notrust_trivium/: .cproject  .project  notrust_trivium Debug.launch  notrust_trivium.ioc
second_aes/: .project  second_aes.ioc
second_base/: .project  second_base.ioc
second_clefia/: .project  second_clefia.ioc
second_enocoro/: .project  second_enocoro.ioc
second_lea/: .mxproject  .project  second_lea.ioc
second_present/: .project  second_present.ioc
second_trivium/: .project  second_trivium.ioc
(+1609 files in other folders)
